# vllm_composer

./: .env  .env.template  .gitignore  README.md  docker-compose.yml
caddy/: Caddyfile  Caddyfile.template
middleware/: Cargo.toml  Dockerfile  app.py  config.yml.template  endpoints.yaml.template  main.py  requirements.txt  secrets.yaml.template  secrets.yml.template  vllmComposer.py
middleware/src/: auth.rs  main.rs  monitoring.rs  state.rs
middleware/src/routes/: endpoints.rs  mod.rs  models.rs  proxy.rs
middleware/tests/: conftest.py  test_config.yml  test_secrets.yml  utils.py
middleware/tests/test_app/: test_routes.py
middleware/tests/test_unit/: test_circuit_breaker.py  test_composer_methods.py  test_endpoints.py  test_refresh_tasks.py  test_server_selection.py
